--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
 </head>
 <body>
     <script src="script.js" defer></script>
+
+    <form id="form1">
+        <div class="flexContainer">
+            <label for="first_name">FIRST NAME <br>
+            <input type="text" id="first_name" name="first_name"></label>
+            
+            <label for="last_name">LAST NAME <br>
+            <input type="text" id="last_name" name="last_name"></label>
+        </div>
+        <div class="flexContainer">
+            <label for="email">EMAIL <br>
+            <input type="email" id="email" name="email"></label>
+
+            <label for="phone_number">PHONE NUMBER<br>
+            <input type="text" id="phone_number" name="phone_number"></label>
+        </div>
+        <div class="flexContainer">
+            <label for="password">PASSWORD<br>
+            <input type="password" id="password" name="password"></label>
+
+            <label for="confirm_password">CONFIRM PASSWORD<br>
+            <input type="password" id="confirm_password" name="confirm_password"></label>
+        </div>
+    </form>
+    <button type="submit" form="form1">Create Account</button>
     
 </body>
 </html>
