add text above form

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <script src="script.js" defer></script>
     <div class="flexContainer">
         <div id="image"></div>
-        <div>  
+        <div> 
+        <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. 
+            Sign up <em>now</em> to get started.
+        </p>
+        <p>You <em>know</em> you want to.</p>
         <form id="form1">
             <div class="flexContainer">
                 <label for="first_name">FIRST NAME <br>
