add text to top of form

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </p>
         <p>You <em>know</em> you want to.</p>
         <form id="form1">
+            <p>Let's do this!</p>
             <div class="flexContainer">
                 <label for="first_name">FIRST NAME <br>
                 <input type="text" id="first_name" name="first_name"></label>
