--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <script src="script.js" defer></script>
     <div class="flexContainer">
+        <!-- Photo by <a href="https://unsplash.com/@bosxdesign?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Sjoukje Bos</a> on <a href="https://unsplash.com/photos/a-white-mushroom-growing-out-of-a-rock-RMQKJCHhWBg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+   -->
         <div id="image"></div>
         <div> 
         <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. 
