add logo to side image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="flexContainer">
         <!-- Photo by <a href="https://unsplash.com/@bosxdesign?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Sjoukje Bos</a> on <a href="https://unsplash.com/photos/a-white-mushroom-growing-out-of-a-rock-RMQKJCHhWBg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    -->
-        <div id="image"></div>
+        <div id="image">
+            <div><span><img src="odin-lined.png"></span>ODIN</div>
+        </div>
         <div> 
         <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. 
             Sign up <em>now</em> to get started.
