adjust logo position and size

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- 
    -->
         <div id="image">
-            <div id="side-logo"><span><img src="odin-lined.png"></span>ODIN</div>
+            <div id="side-logo"><img src="odin-lined.png">ODIN</div>
             <p id="side-image-credit">Photo by <a href="https://unsplash.com/@bosxdesign?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Sjoukje Bos</a> on <a href="https://unsplash.com/photos/a-white-mushroom-growing-out-of-a-rock-RMQKJCHhWBg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
         </div>
         <div> 
