adjust position of image credit

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
    -->
         <div id="image">
             <div id="side-logo"><img src="odin-lined.png">ODIN</div>
-            <p id="side-image-credit">Photo by <a href="https://unsplash.com/@bosxdesign?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Sjoukje Bos</a> on <a href="https://unsplash.com/photos/a-white-mushroom-growing-out-of-a-rock-RMQKJCHhWBg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+            <div id="side-image-credit">
+            <p >Photo by <a href="https://unsplash.com/@bosxdesign?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Sjoukje Bos</a> on <a href="https://unsplash.com/photos/a-white-mushroom-growing-out-of-a-rock-RMQKJCHhWBg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+            </div>
         </div>
         <div> 
-        <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. 
+        <p class="largeFont"><b>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. 
             Sign up <em>now</em> to get started.
-        </p>
-        <p>You <em>know</em> you want to.</p>
+        </b></p>
+        <p class="largeFont"><b>You <em>know</em> you want to.</b></p>
         <form id="form1">
-            <p>Let's do this!</p>
+            <p class="largeFont"><b>Let's do this!</b></p>
             <div class="flexContainer">
                 <label for="first_name">FIRST NAME <br>
                 <input type="text" id="first_name" name="first_name"></label>
