adjust position of #content to the right of image

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
    -->
         <div id="image">
             <div id="side-logo"><img src="odin-lined.png">ODIN</div>
-            <div id="side-image-credit">
-            <p >Photo by <a href="https://unsplash.com/@bosxdesign?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Sjoukje Bos</a> on <a href="https://unsplash.com/photos/a-white-mushroom-growing-out-of-a-rock-RMQKJCHhWBg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
-            </div>
+            <p id="side-image-credit">Photo by <a href="https://unsplash.com/@bosxdesign?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Sjoukje Bos</a> on <a href="https://unsplash.com/photos/a-white-mushroom-growing-out-of-a-rock-RMQKJCHhWBg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
         </div>
-        <div> 
+        <div id="content"> 
         <p class="largeFont"><b>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. 
             Sign up <em>now</em> to get started.
         </b></p>
