add minor styling tweaks to button and inputs

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <input type="password" id="confirm_password" name="confirm_password"></label>
             </div>
         </form>
-        <button type="submit" form="form1">Create Account</button>
+        <button type="submit" form="form1" id="button">Create Account</button>
         <p id="this">Already have an account? <a href="">Log in</a></p>
         </div>
     </div>  
