add pattern validation to phone number

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <input type="email" id="email" name="email"></label>
 
                 <label for="phone_number">PHONE NUMBER<br>
-                <input type="text" id="phone_number" name="phone_number"></label>
+                <input type="text" id="phone_number" name="phone_number" pattern="\d{3}(-?)\d{3}(-?)\d{4}"></label>
             </div>
             <div class="flexContainer">
                 <label for="password">PASSWORD<br>
