--- a/index.html
+++ b/index.html
@@ -25,17 +25,21 @@
             <p class="largeFont"><b>Let's do this!</b></p>
             <div class="flexContainer">
                 <label for="first_name">FIRST NAME <br>
-                <input type="text" id="first_name" name="first_name"></label>
+                <input type="text" id="first_name" name="first_name" minlength="1" maxlength="30"></label>
                 
                 <label for="last_name">LAST NAME <br>
-                <input type="text" id="last_name" name="last_name"></label>
+                <input type="text" id="last_name" name="last_name" minlength="1" maxlength="30"></label>
             </div>
             <div class="flexContainer">
                 <label for="email">EMAIL <br>
                 <input type="email" id="email" name="email"></label>
 
                 <label for="phone_number">PHONE NUMBER<br>
-                <input type="text" id="phone_number" name="phone_number" pattern="\d{3}(-?)\d{3}(-?)\d{4}"></label>
+                <input type="text" id="phone_number" name="phone_number" pattern="\d{3}([-]?)\d{3}([-]?)\d{4}"></label>
+                <!-- pattern="\d{3}(-?)\d{3}(-?)\d{4}" works. Hyphens are optional. -->
+                <!-- pattern="\d{3}[-?]\d{3}[-?]\d{4}" makes the "-" necessary. Any effect with "?"? 
+                    Yes. A hyphen or a question mark (doesn't matter which one) is necessary in the two spots. -->
+                <!-- pattern="\d{3}([-]?)\d{3}([-]?)\d{4}" also works. Hyphens are optional. -->
             </div>
             <div class="flexContainer">
                 <label for="password">PASSWORD<br>
