add minlength and .+ pattern to password and confirm password

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             </div>
             <div class="flexContainer">
                 <label for="password">PASSWORD<br>
-                <input type="password" id="password" name="password"></label>
+                <input type="password" id="password" name="password" pattern=".+" minlength="8"></label>
 
                 <label for="confirm_password">CONFIRM PASSWORD<br>
-                <input type="password" id="confirm_password" name="confirm_password"></label>
+                <input type="password" id="confirm_password" name="confirm_password" pattern=".+" minlength="8"></label>
             </div>
         </form>
         <button type="submit" form="form1" id="button">Create Account</button>
